--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ description = "RED Connector FTP is part of the Curious Containers project."
 
 [tool.poetry.dependencies]
 python = "^3.4"
+jsonschema = "^3.0"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+red-connector-ftp = 'red_connector_ftp.main:main'
